syntax = "proto3";

option java_package = "me.theek.memox.core.datastore_proto";
option java_multiple_files = true;

message UserPreferences {
  bool should_hide_onboarding = 1;
  bool should_show_get_started_screen = 2;
}